# MtSyft

./: CMakeLists.txt  README.md  run-benchmarks.sh  run-navigation.sh  running-example.sh
EmpiricalResults/CounterGames/: Figure_1.py  Figure_2.py  Table_1.py  res_cb_mtsyft.csv  res_conj_mtsyft.csv  res_mtsyft.csv  times_cb_mtsyft.csv  times_conj_mtsyft.csv  times_mtsyft.csv
EmpiricalResults/RobotNavigation/: Table_2.py  res_cb_mtsyft.csv  res_conj_mtsyft.csv  res_mtsyft.csv  times_cb_mtsyft.csv  times_conj_mtsyft.csv  times_mtsyft.csv
src/: CMakeLists.txt  MtSyft.cpp  common-core-MtSyft.cpp  refining-envs-MtSyft.cpp
src/synthesis/header/: BestEffortSynthesizer.h  ChainedBestEffortStrategy.h  CommonCoreChainSynthesizer.h  EnvironmentsChainBestEffortSynthesizer.h  RefiningEnvironmentsChainSynthesizer.h  SymbolicStateDfa.h  Synthesizer.h  Transducer.h  VarMgr.h
src/synthesis/source/: BestEffortSynthesizer.cpp  Common.cpp  CommonCoreChainSynthesizer.cpp  DfaGameSynthesizer.cpp  EnvironmentsChainBestEffortSynthesizer.cpp  RefiningEnvironmentsChainSynthesizer.cpp  SymbolicStateDfa.cpp  Transducer.cpp  VarMgr.cpp
